TL/compil/tp4/autocell/parser.output
   0  $accept : %entry% $end

   1  program : INT DIMENSIONS OF config END opt_statements EOF

   2  config : INT DOT_DOT INT
   3         | fields

   4  fields : field
   5         | fields COMMA field

   6  field : ID OF INT DOT_DOT INT

   7  opt_statements :
   8                 | statement opt_statements

   9  statement : cell ASSIGN expression
  10            | ID ASSIGN expression
  11            | IF condition THEN opt_statements END
  12            | IF condition THEN opt_statements ELSE opt_statements END

  13  cell : LBRACKET INT COMMA INT RBRACKET

  14  atomic : value
  15         | cell
  16         | INT
  17         | ID
  18         | LPARENT expression RPARENT

  19  value : ADD atomic
  20        | SUB atomic

  21  lower : atomic
  22        | atomic MUL lower
  23        | atomic DIV lower
  24        | atomic MOD lower

  25  expression : lower
  26             | expression ADD lower
  27             | expression SUB lower

  28  condition : expression EQ expression
  29            | expression NE expression
  30            | expression GT expression
  31            | expression GE expression
  32            | expression LT expression
  33            | expression LE expression

  34  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (34)

	INT  shift 3
	.  error

	program  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	program : INT . DIMENSIONS OF config END opt_statements EOF  (1)

	DIMENSIONS  shift 5
	.  error


state 4
	%entry% : '\001' program .  (34)

	.  reduce 34


state 5
	program : INT DIMENSIONS . OF config END opt_statements EOF  (1)

	OF  shift 6
	.  error


state 6
	program : INT DIMENSIONS OF . config END opt_statements EOF  (1)

	ID  shift 7
	INT  shift 8
	.  error

	config  goto 9
	fields  goto 10
	field  goto 11


state 7
	field : ID . OF INT DOT_DOT INT  (6)

	OF  shift 12
	.  error


state 8
	config : INT . DOT_DOT INT  (2)

	DOT_DOT  shift 13
	.  error


state 9
	program : INT DIMENSIONS OF config . END opt_statements EOF  (1)

	END  shift 14
	.  error


state 10
	config : fields .  (3)
	fields : fields . COMMA field  (5)

	COMMA  shift 15
	END  reduce 3


state 11
	fields : field .  (4)

	.  reduce 4


state 12
	field : ID OF . INT DOT_DOT INT  (6)

	INT  shift 16
	.  error


state 13
	config : INT DOT_DOT . INT  (2)

	INT  shift 17
	.  error


state 14
	program : INT DIMENSIONS OF config END . opt_statements EOF  (1)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	EOF  reduce 7

	opt_statements  goto 21
	statement  goto 22
	cell  goto 23


state 15
	fields : fields COMMA . field  (5)

	ID  shift 7
	.  error

	field  goto 24


state 16
	field : ID OF INT . DOT_DOT INT  (6)

	DOT_DOT  shift 25
	.  error


state 17
	config : INT DOT_DOT INT .  (2)

	.  reduce 2


state 18
	cell : LBRACKET . INT COMMA INT RBRACKET  (13)

	INT  shift 26
	.  error


state 19
	statement : IF . condition THEN opt_statements END  (11)
	statement : IF . condition THEN opt_statements ELSE opt_statements END  (12)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 33
	condition  goto 34
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 20
	statement : ID . ASSIGN expression  (10)

	ASSIGN  shift 38
	.  error


state 21
	program : INT DIMENSIONS OF config END opt_statements . EOF  (1)

	EOF  shift 39
	.  error


state 22
	opt_statements : statement . opt_statements  (8)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	EOF  reduce 7
	END  reduce 7
	ELSE  reduce 7

	opt_statements  goto 40
	statement  goto 22
	cell  goto 23


state 23
	statement : cell . ASSIGN expression  (9)

	ASSIGN  shift 41
	.  error


state 24
	fields : fields COMMA field .  (5)

	.  reduce 5


state 25
	field : ID OF INT DOT_DOT . INT  (6)

	INT  shift 42
	.  error


state 26
	cell : LBRACKET INT . COMMA INT RBRACKET  (13)

	COMMA  shift 43
	.  error


state 27
	atomic : LPARENT . expression RPARENT  (18)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 44
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 28
	value : ADD . atomic  (19)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	atomic  goto 45
	value  goto 36


state 29
	value : SUB . atomic  (20)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	atomic  goto 46
	value  goto 36


state 30
	atomic : ID .  (17)

	.  reduce 17


state 31
	atomic : INT .  (16)

	.  reduce 16


state 32
	atomic : cell .  (15)

	.  reduce 15


state 33
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)
	condition : expression . EQ expression  (28)
	condition : expression . NE expression  (29)
	condition : expression . GT expression  (30)
	condition : expression . GE expression  (31)
	condition : expression . LT expression  (32)
	condition : expression . LE expression  (33)

	ADD  shift 47
	SUB  shift 48
	EQ  shift 49
	NE  shift 50
	GT  shift 51
	GE  shift 52
	LT  shift 53
	LE  shift 54
	.  error


state 34
	statement : IF condition . THEN opt_statements END  (11)
	statement : IF condition . THEN opt_statements ELSE opt_statements END  (12)

	THEN  shift 55
	.  error


state 35
	lower : atomic .  (21)
	lower : atomic . MUL lower  (22)
	lower : atomic . DIV lower  (23)
	lower : atomic . MOD lower  (24)

	MUL  shift 56
	DIV  shift 57
	MOD  shift 58
	EOF  reduce 21
	END  reduce 21
	LBRACKET  reduce 21
	RPARENT  reduce 21
	ADD  reduce 21
	SUB  reduce 21
	IF  reduce 21
	THEN  reduce 21
	ELSE  reduce 21
	EQ  reduce 21
	NE  reduce 21
	GT  reduce 21
	GE  reduce 21
	LT  reduce 21
	LE  reduce 21
	ID  reduce 21


state 36
	atomic : value .  (14)

	.  reduce 14


state 37
	expression : lower .  (25)

	.  reduce 25


state 38
	statement : ID ASSIGN . expression  (10)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 59
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 39
	program : INT DIMENSIONS OF config END opt_statements EOF .  (1)

	.  reduce 1


state 40
	opt_statements : statement opt_statements .  (8)

	.  reduce 8


state 41
	statement : cell ASSIGN . expression  (9)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 60
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 42
	field : ID OF INT DOT_DOT INT .  (6)

	.  reduce 6


state 43
	cell : LBRACKET INT COMMA . INT RBRACKET  (13)

	INT  shift 61
	.  error


state 44
	atomic : LPARENT expression . RPARENT  (18)
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)

	RPARENT  shift 62
	ADD  shift 47
	SUB  shift 48
	.  error


state 45
	value : ADD atomic .  (19)

	.  reduce 19


state 46
	value : SUB atomic .  (20)

	.  reduce 20


state 47
	expression : expression ADD . lower  (26)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	atomic  goto 35
	value  goto 36
	lower  goto 63


state 48
	expression : expression SUB . lower  (27)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	atomic  goto 35
	value  goto 36
	lower  goto 64


state 49
	condition : expression EQ . expression  (28)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 65
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 50
	condition : expression NE . expression  (29)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 66
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 51
	condition : expression GT . expression  (30)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 67
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 52
	condition : expression GE . expression  (31)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 68
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 53
	condition : expression LT . expression  (32)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 69
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 54
	condition : expression LE . expression  (33)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	expression  goto 70
	atomic  goto 35
	value  goto 36
	lower  goto 37


state 55
	statement : IF condition THEN . opt_statements END  (11)
	statement : IF condition THEN . opt_statements ELSE opt_statements END  (12)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	END  reduce 7
	ELSE  reduce 7

	opt_statements  goto 71
	statement  goto 22
	cell  goto 23


state 56
	lower : atomic MUL . lower  (22)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	atomic  goto 35
	value  goto 36
	lower  goto 72


state 57
	lower : atomic DIV . lower  (23)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	atomic  goto 35
	value  goto 36
	lower  goto 73


state 58
	lower : atomic MOD . lower  (24)

	LBRACKET  shift 18
	LPARENT  shift 27
	ADD  shift 28
	SUB  shift 29
	ID  shift 30
	INT  shift 31
	.  error

	cell  goto 32
	atomic  goto 35
	value  goto 36
	lower  goto 74


state 59
	statement : ID ASSIGN expression .  (10)
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)

	ADD  shift 47
	SUB  shift 48
	EOF  reduce 10
	END  reduce 10
	LBRACKET  reduce 10
	IF  reduce 10
	ELSE  reduce 10
	ID  reduce 10


state 60
	statement : cell ASSIGN expression .  (9)
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)

	ADD  shift 47
	SUB  shift 48
	EOF  reduce 9
	END  reduce 9
	LBRACKET  reduce 9
	IF  reduce 9
	ELSE  reduce 9
	ID  reduce 9


state 61
	cell : LBRACKET INT COMMA INT . RBRACKET  (13)

	RBRACKET  shift 75
	.  error


state 62
	atomic : LPARENT expression RPARENT .  (18)

	.  reduce 18


state 63
	expression : expression ADD lower .  (26)

	.  reduce 26


state 64
	expression : expression SUB lower .  (27)

	.  reduce 27


state 65
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)
	condition : expression EQ expression .  (28)

	ADD  shift 47
	SUB  shift 48
	THEN  reduce 28


state 66
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)
	condition : expression NE expression .  (29)

	ADD  shift 47
	SUB  shift 48
	THEN  reduce 29


state 67
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)
	condition : expression GT expression .  (30)

	ADD  shift 47
	SUB  shift 48
	THEN  reduce 30


state 68
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)
	condition : expression GE expression .  (31)

	ADD  shift 47
	SUB  shift 48
	THEN  reduce 31


state 69
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)
	condition : expression LT expression .  (32)

	ADD  shift 47
	SUB  shift 48
	THEN  reduce 32


state 70
	expression : expression . ADD lower  (26)
	expression : expression . SUB lower  (27)
	condition : expression LE expression .  (33)

	ADD  shift 47
	SUB  shift 48
	THEN  reduce 33


state 71
	statement : IF condition THEN opt_statements . END  (11)
	statement : IF condition THEN opt_statements . ELSE opt_statements END  (12)

	END  shift 76
	ELSE  shift 77
	.  error


state 72
	lower : atomic MUL lower .  (22)

	.  reduce 22


state 73
	lower : atomic DIV lower .  (23)

	.  reduce 23


state 74
	lower : atomic MOD lower .  (24)

	.  reduce 24


state 75
	cell : LBRACKET INT COMMA INT RBRACKET .  (13)

	.  reduce 13


state 76
	statement : IF condition THEN opt_statements END .  (11)

	.  reduce 11


state 77
	statement : IF condition THEN opt_statements ELSE . opt_statements END  (12)
	opt_statements : .  (7)

	LBRACKET  shift 18
	IF  shift 19
	ID  shift 20
	END  reduce 7

	opt_statements  goto 78
	statement  goto 22
	cell  goto 23


state 78
	statement : IF condition THEN opt_statements ELSE opt_statements . END  (12)

	END  shift 79
	.  error


state 79
	statement : IF condition THEN opt_statements ELSE opt_statements END .  (12)

	.  reduce 12


32 terminals, 14 nonterminals
35 grammar rules, 80 states
